--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
     <title>Login</title>
@@ -13,7 +14,7 @@
     <main>
         <section id="login">
             <div id="imagem">
-              
+
             </div>
 
             <div id="formulario">
@@ -21,10 +22,25 @@
                 <p>Seja Bem Vindo Novamente. Faça login para acessar sua cotna e poder fazer as configurações no seu
                     ambiente.</p>
 
-                    <form action="login.php" method="post">
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <i class="material-icons">person</i>
+                        <input type="email" name="login" placeholder="Seu E-mail" autocomplete="email" required
+                            maxlength="30">
+                        <label for="login">login</label>
+                    </div>
 
+                    <div class="campo">
+                        <i class="material-icons">vpn_key</i>
+                        <input type="password" name="senha" id="senha" placeholder="Digite sua Senha"
+                            autocomplete="current-password" required minlength="8" maxlength="20">
+                        <label for="senha">Senha</label>
+                    </div>
 
-                    </form>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html"></a>
+                    Esqueci a Senha <i class="material-icons">mail</i>
+                </form>
             </div>
 
         </section>
