--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     </div>
 
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html"></a>
-                    Esqueci a Senha <i class="material-icons">mail</i>
+                    <a href="esqueci.html" class="botao">Esqueci a Senha <i class="material-icons">mail</i></a>
+                    
                 </form>
             </div>
 
